# my-school

./: .bashrc  .flake8  .gitignore  .isort.cfg  Makefile  README.md  pyproject.toml  pytest.ini  rav.yaml  recommendations.md  requirements.in  requirements.txt  schema.yaml
.github/workflows/: analytics.yml
apps/devspace/: apps.py  models.py  utils.py
apps/school/: models.py  serializers.py  urls.py  validators.py
apps/school/migrations/: 0001_initial.py
apps/tenants/: models.py  serializers.py  urls.py  views.py
apps/user/: admin.py  backends.py  managers.py  models.py  serializers.py
apps/user/migrations/: 0001_initial.py
core/: celery.py  misc.py  settings.py  urls.py
core/settings/: __init__.py  base.py  dev.py  prod.py  staging.py
tenants/: models.py
